k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: retailpulse-ingress
  namespace: retailpulse
spec:
  ingressClassName: nginx
  rules:
    - host: retailpulse.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: streamlit
                port:
                  number: 8501
          - path: /mlflow
            pathType: Prefix
            backend:
              service:
                name: mlflow
                port:
                  number: 5000
          - path: /airflow
            pathType: Prefix
            backend:
              service:
                name: airflow-webserver
                port:
                  number: 8080
